--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -35,7 +35,7 @@ jobs:
         flavor: |
           latest=false
         tags: |
-          type=raw,value=latest
+          type=raw,value=
 
     - name: Build and Push to Docker Hub
       id: docker_build
