--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,11 +31,11 @@ jobs:
       id: docker_meta
       uses: docker/metadata-action@v5
       with:
-        images: gigantosaurio/aws:car-web
+        images: gigantosaurio/aws
         flavor: |
-          latest=true
+          latest=false
         tags: |
-          type=raw,value=latest
+          type=raw,value=car-web
 
     - name: Build and Push to Docker Hub
       id: docker_build
