--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ "main" ]
 env:
-  EKS_CLUSTER_NAME: demo-cluter2
+  EKS_CLUSTER_NAME: demo-cluster2
   AWS_REGION: us-east-1
 
 jobs:
