--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -64,4 +64,4 @@ jobs:
 
     - name: Deploy to EKS
       run: |
-        kubectl apply -f manifests/1-car-web-deployment
+        kubectl apply -f manifests/1-car-web-deployment.yml
