--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -65,3 +65,7 @@ jobs:
     - name: Deploy to EKS
       run: |
         kubectl apply -f manifests/1-car-web-deployment.yml
+        
+    - name: Force rollout of deployment
+      run: |
+        kubectl rollout restart deployment car-web-deploy
